<resources>
    <!--    Test Data For Items-->
    <string name="app_name">Store App</string>
    <string name="item_1_name">Item Name 1</string>
    <string name="item_2_name">Item Name 2</string>
    <string name="item_3_name">Item Name 3</string>
    <string name="item_4_name">Item Name 4</string>
    <string name="item_5_name">Item Name 5</string>
    <string name="item_6_name">Item Name 6</string>
    <string name="item_7_name">Item Name 7</string>
    <string name="item_8_name">Item Name 8</string>
    <string name="item_9_name">Item Name 9</string>
    <string name="item_10_name">Item Name 10</string>

    <string name="test_price">$0</string>

    <string name="test_description">Test Description</string>
    <string name="item_description_1">The headphones were on. [1]</string>
    <string name="item_description_2">They had been utilized on purpose. [2]</string>
    <string name="item_description_3">She looked at her student wondering if she could ever
        get through. [3]</string>
    <string name="item_description_4">There was something in the tree. [4]</string>
    <string name="item_description_5">Nothing seemed to move until the moment she began
        to take her eyes off the tree. [5]</string>
    <string name="item_description_6">The scratches or striations seen in the park rocks were caused
        by these attached boulders. [6]</string>
    <string name="item_description_7">The ice sheet also plucked and rounded Burke Mountain
        into the shape it possesses today. [7]</string>
    <string name="item_description_8">Colors bounced around in her head. [8]</string>
    <string name="item_description_9">They mixed and threaded themselves together. [9]</string>
    <string name="item_description_10">Even colors that had no business being together.  [10]</string>


    <!--Test Data For Users-->
    <string name="shipping_address">439 Port Washington Road. Milk River, Alberta,
        Canada T0K 1M0</string>

    <string name="credit_card_number">4556794324866100</string>
    <string name="exp_date">11/2027</string>
    <string name='ccv'>588</string>

    <string name="credit_card_number2">7297337879533070</string>
    <string name="exp_date2">12/2028</string>
    <string name='ccv2'>612</string>

    <string name='delivery_date'>June 22 2023</string>


    <string name="add_to_cart">Add To Cart</string>
    <string name="price_0">Price: $0</string>
    <string name="search">Search</string>
    <string name="dropdown_menu">Dropdown Menu</string>
    <string name="title1">title!</string>
    <string name="title2">title2</string>
    <string name="header_title">Header Title</string>
    <string name="header_text">Header Text</string>
    <string name="home_screen">home screen</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="menu">Menu</string>
    <string name="your_account">Your Account</string>
    <string name="your_cart">Your Cart</string>
    <string name="home">Home</string>
    <string name="decrease_quantity" />
    <string name="_0">0</string>
    <string name="increase_quantity">Increase Quantity</string>
    <string name="quantity">Quantity</string>
    <string name="_0_00">$0.00</string>
    <string name="remove_from_cart">Remove From Cart</string>
    <string name="remove">Remove</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total: %1s</string>
    <string name="subtotal">SubTotal: %1s</string>
    <string name="tax_13">Tax: %1s</string>


    <string name="delivery_time">Delivery Time:</string>
    <string name="shipping_to">Shipping To:</string>
    <string name="order">Order #:</string>
    <string name="your_orders">Your Orders</string>
    <string name="option_icon">Option Icon</string>


    <!--Setting Options-->
    <string name="login_security"><![CDATA[Login & Security]]></string>
    <string name="manage_payment_information">Manage Payment Information</string>
    <string name="your_addresses">Your Addresses</string>
    <string name="help_center">Help Center</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <!--Setting Descriptions-->
    <string name="login_security_description">Manage your password, email and mobile number</string>
    <string name="manage_payment_information_description">Add or manage your payment information</string>
    <string name="your_addresses_description">Add or manage your current addresses</string>
    <string name="help_center_description">Browse assistance options</string>
    <string name="settings_description">Control your app\'s settings like Dark Mode, etc</string>
    <string name="contact_us_description">Contact us via Email if you have any questions or concerns</string>
    <string name="cancel_items">Cancel Items</string>
    <string name="orders">ORDERS</string>
    <string name="item_image">Item Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="delivery_address_input">Delivery Address Input</string>
    <string name="credit_card_number_text">Credit Card Number</string>
    <string name="expires">Expires: %s</string>
    <string name="cc_image">CC Image</string>
    <string name="payment_options">Payment Options</string>
    <string name="selected_payment_method">Selected Payment Method</string>
    <string name="payment_selection_options">Payment Selection Options</string>
    <string name="add_new_payment_method">Add New Payment Method</string>
    <string name="credit_card_number_display_text">Credit Card Number</string>
    <string name="ccv_display_text">CCV</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="mm_yyyy">mm/yyyy</string>
    <string name="mm_yy">mm/yy</string>
    <string name="select">Select</string>
    <string name="shipping_address2">Shipping Address: </string>
    <string name="filler_address_text">Filler Address Text</string>
    <string name="payment_method">Payment Method: </string>
    <string name="filler_payment_info">Filler Payment Info</string>
    <string name="change">Change</string>
    <string name="finish_order">Finish Order</string>
    <string name="items_total">Items Total:</string>
    <string name="tax">Tax:</string>
    <string name="order_total">Order Total:</string>
    <string name="shipping">Shipping:</string>
</resources>