<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/settings"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings"
        app:layout_constraintStart_toStartOf="@id/settings"
        android:text="@string/customer_service"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginAndSecurity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_security"
        app:layout_constraintTop_toBottomOf="@id/help_button"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/paymentInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginAndSecurity"
        android:text="@string/manage_payment_information"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yourAddresses"
        app:layout_constraintTop_toBottomOf="@+id/paymentInformation"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/your_addresses"/>
</androidx.constraintlayout.widget.ConstraintLayout>
