<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="411dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/material_dynamic_neutral90">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/eta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/delivery_time"
        android:textSize="11sp"/>

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/eta"
            app:layout_constraintEnd_toStartOf="@id/shippingTo"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/total"
            android:layout_marginStart="50dp"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/shippingTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/total"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/shipping_to"
            android:textSize="11sp"
            android:layout_marginStart="80dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/orderNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/shippingTo"
            android:text="@string/order"
            android:textSize="11sp"
            android:layout_marginStart="30dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/item_display"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/eta"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/item_display"
            app:layout_constraintBottom_toBottomOf="parent
"           app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/cancel_items"
            android:textSize="11sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>