<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="110dp"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/creditCardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit_card_number_text"
            app:layout_constraintStart_toEndOf="@id/creditCardImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>

        <TextView
            android:id="@+id/expiryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/creditCardNumber"
            app:layout_constraintStart_toStartOf="@+id/creditCardNumber"
            android:text="@string/expires"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>

        <ImageView
            android:id="@+id/creditCardImage"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/mastercard_icon"
            tools:layout_editor_absoluteX="-143dp"
            tools:layout_editor_absoluteY="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/creditCardNumber"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/cc_image" />

        <ImageView
            android:id="@+id/selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_check_circle_outline_24"
            tools:layout_editor_absoluteX="355dp"
            tools:layout_editor_absoluteY="9dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/selected_payment_method" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>