<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="85dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="@color/material_dynamic_neutral95">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/item_image"
            android:layout_marginTop="8dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/item_image"
            tools:src="@drawable/item1"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/item_image"
            android:layout_marginTop="15dp"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/material_dynamic_neutral_variant20"
            style="@style/TextAppearance.AppCompat.Small"
            tools:text="@string/item_1_name"/>

        <TextView
            android:id="@+id/item_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/quantity"
            android:layout_marginStart="60dp"
            app:layout_constraintStart_toEndOf="@+id/item_name"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/material_dynamic_neutral_variant20"
            app:layout_constraintBottom_toTopOf="@id/quantity_number"
            android:textStyle="bold"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/quantity_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_0"
            android:layout_marginBottom="20dp"
            android:textColor="@color/material_dynamic_neutral_variant0"
            app:layout_constraintTop_toBottomOf="@id/item_quantity"
            app:layout_constraintEnd_toEndOf="@+id/item_quantity"
            app:layout_constraintStart_toStartOf="@+id/item_quantity"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>