<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/paymentOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_options"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:textColor="@color/material_dynamic_neutral30"
        android:paddingBottom="50dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="370dp"
        android:layout_height="452dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="67dp"
        app:layout_constraintTop_toBottomOf="@id/paymentOptions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/material_dynamic_neutral99"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/payment_selection_options"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        app:icon="@drawable/baseline_edit_24"
        app:iconTint="@color/white"/>

    <Button
        android:id="@+id/select"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recycler_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/select"/>

</androidx.constraintlayout.widget.ConstraintLayout>