<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="@color/material_dynamic_neutral_variant90">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:importantForAccessibility="no"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="fitCenter"
            android:layout_margin="15dp"/>

        <TextView
            android:id="@+id/item_title"
            android:layout_width="0dp"
            android:layout_height="20dp"
            app:layout_constraintTop_toBottomOf="@+id/item_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:gravity="center"
            tools:text="@string/item_1_name"
            android:paddingBottom="2dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/item_description"
            android:layout_width="0dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/item_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="4dp"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/test_description"
            tools:text="@string/item_description_7"
            android:textColor="@color/material_dynamic_neutral_variant30"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/item_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/price_0"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            android:paddingBottom="10dp"/>

        <include layout="@layout/quantity_buttons"
            android:id="@+id/quantity_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_price"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>